# examPortal

./: Procfile  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
media/uploads/: 23xw41AnswerKey_Vm8GHHm.txt  23xw41AnswerKey_bw8XWtK.txt  23xw41_83A79uR.txt  23xw41_Aa6CqaZ.txt  csOS.txt  csOSAnswerKey.txt  sample_ans_1.txt  sample_ans_2.txt  sample_exam_1.txt  sample_exam_2.txt  ssWebDevAnswerKey.txt  ssWebDev_4wVInRN.txt  test-os.txt  test1-key_pO7PBqi.txt  test1-key_tHYgQjQ.txt  test1_a9MMw8c.txt  test1_wzMKYSL.txt  test2-key.txt  test2.txt  test2os-key_cQpQz7k.txt  test2os_1.txt  testos-key.txt
moodle/: populate_data.py  settings.py  urls.py  wsgi.py
myapp/: admin.py  forms.py  models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_alter_login_password_alter_login_table.py  0003_testfiles.py  0004_alter_testfiles_name.py  0005_testfiles_endtime_testfiles_starttime.py  0006_testfiles_coursecode.py  0007_remove_testfiles_file_testfiles_afiles_and_more.py  0008_alter_testfiles_coursecode.py  0009_scores.py  0010_alter_scores_test.py  0011_courses_classcourses.py  0012_studenttestrecord.py  0013_alter_studenttestrecord_id.py  0014_rename_is_passed_studenttestrecord_status_and_more.py  0015_studenttestrecord_user_answers.py  0016_teacherlogin.py  0017_login_course_login_mail_login_stuname.py  0018_remove_login_stuname.py  0019_alter_password_fields.py
myapp/static/: testStyles.css
myapp/templates/: CoursesTest.html  aboutUs.html  base.html  fileupload.html  home.html  profile.html  test.html  (+5 more)
tutorial-env/: pyvenv.cfg
(+3 files in other folders)
