[project]
name = "moodle"
version = "1.0.0"
description = "Exam Portal Django Application"
requires-python = ">=3.10"

[tool.vercel]
pythonVersion = "3.10"

[tool.poetry]
name = "moodle"
version = "1.0.0"
description = "Exam Portal Django Application"
requires-python = ">=3.10"
dependencies = [
    "Django>=5.1.6",
    "mysqlclient>=2.2.7",
    "pytz>=2025.2",
]
